Set max dims for collapse icon to prevent blurriness

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -10996,6 +10996,8 @@ h6.facets-title {
 .assessment-toggle .panel-heading > a:before {
   background-image: url(../images/collapse-minus.svg);
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
   content: '';
   display: inline-block;
   height: 1em;
