--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -259,6 +259,8 @@
   .panel-heading {
     > a:before {
       .svg-icon(collapse-minus);
+      background-position: center;
+      background-size: 20px;
       content: '';
       display: inline-block;
       height: 1em;
